--- a/source/form.html
+++ b/source/form.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Пинк: Конкурс</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-    <header class="page-header">
+  <body class="form-main">
+    <div class="header-intro-wrapper header-intro-wrapper--inner-page">
+      <header class="header-intro-wrapper__page-header page-header">
       <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка">
       </a>
@@ -28,10 +30,14 @@
       </nav>
     </header>
 
-    <main class="page-main">
-      <h1 class="page-title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <div class="header-intro-wrapper__intro intro">
+        <h1 class="intro__page-title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      </div>
+    </div>
 
+    <main class="page-main">
       <section class="competition">
+        <h2 class="visually-hidden">Конкурс</h2>
         <p class="competition__slogan">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         <form class="competition__form form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="form__name">
@@ -114,12 +120,14 @@
       </section>
     </main>
 
-    <footer class="page-footer">
-      <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
-      </a>
-      <div class="page-footer__social social">
-        <ul class="social__list">
+    <footer class="inner-page-footer">
+      <div class="inner-page-footer__logo">
+        <a class="inner-page-footer__logo-link" href="index.html">
+          <img class="inner-page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
+        </a>
+      </div>
+      <div class="inner-page-footer__social social">
+        <ul class="social__list list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>
           </li>
@@ -131,7 +139,7 @@
           </li>
         </ul>
       </div>
-      <div class="page-footer__copyright copyright">
+      <div class="inner-page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
