добавляет фиксы разметки и стилей

--- a/source/form.html
+++ b/source/form.html
@@ -8,23 +8,25 @@
   <body class="form-main">
     <div class="header-intro-wrapper header-intro-wrapper--inner-page">
       <header class="header-intro-wrapper__page-header page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка">
-      </a>
+        <div class="page-header__wrapper">
+          <a class="page-header__logo-link" href="index.html">
+            <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка">
+          </a>
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+        </div>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item site-list__item--current">
-            <a href="photo.html">Фотографии</a>
+            <a class="site-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a>Конкурс</a>
+            <a class="site-list__link">Конкурс</a>
           </li>
           <li class="site-list__item">
-            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -120,13 +122,11 @@
       </section>
     </main>
 
-    <footer class="inner-page-footer">
-      <div class="inner-page-footer__logo">
-        <a class="inner-page-footer__logo-link" href="index.html">
-          <img class="inner-page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
-        </a>
-      </div>
-      <div class="inner-page-footer__social social">
+    <footer class="page-footer">
+      <a class="page-footer__logo-link" href="index.html">
+        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
+      </a>
+      <div class="page-footer__social social">
         <ul class="social__list list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>
@@ -139,7 +139,7 @@
           </li>
         </ul>
       </div>
-      <div class="inner-page-footer__copyright copyright">
+      <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
