--- a/source/index.html
+++ b/source/index.html
@@ -9,26 +9,24 @@
     <div class="header-intro-wrapper">
       <header class="header-intro-wrapper__page-header page-header">
         <div class="page-header__wrapper">
-          <div class="page-header__logo-wrapper">
-            <a class="page-header__logo">
-              <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">
-            </a>
-          </div>
+          <a class="page-header__logo-link">
+            <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">
+          </a>
           <button class="main-nav__toggle" type="button">Открыть меню</button>
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a>Главная</a>
+              <a class="site-list__link">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="photo.html">Фотографии</a>
+              <a class="site-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Конкурс</a>
+              <a class="site-list__link" href="form.html">Конкурс</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
         </nav>
@@ -174,8 +172,8 @@
 
     </main>
 
-    <footer class="main-page-footer">
-      <div class="main-page-footer__contacts contacts">
+    <footer class="page-footer">
+      <div class="page-footer__contacts contacts">
         <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
         <p class="contacts__phone">
           Звоните: <a class="contacts__phone-link" href="tel:+78125556666">+7 (812) 555-66-66</a>
