добавляет новые стили для блоков

--- a/source/index.html
+++ b/source/index.html
@@ -170,23 +170,54 @@
         </div>
       </section>
 
+      <section class="contacts">
+        <h2 class="contacts__title visually-hidden">Контакты</h2>
+        <div class="contacts__text">
+          <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
+          <p class="contacts__phone">
+            Звоните:
+            <br>
+            <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+          </p>
+          <p class="contacts__email">
+            Пишите:
+            <br>
+            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="contacts__come-to-us">
+            Приезжайте в гости:
+            <br>
+            <span class="contacts__address">ул. Большая Конюшенная, 19/8</span>
+          </p>
+        </div>
+        <a class="contacts__map" href="#">
+          <img class="contacts__map-image" src="https://via.placeholder.com/320x645" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">
+  <!--        <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">-->
+        </a>
+      </section>
     </main>
 
-    <footer class="page-footer">
-      <div class="page-footer__contacts contacts">
-        <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
-        <p class="contacts__phone">
-          Звоните: <a class="contacts__phone-link" href="tel:+78125556666">+7 (812) 555-66-66</a>
-        </p>
-        <p class="contacts__email">
-          Пишите: <a class="contacts__email-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p class="contacts__come-to-us">
-          Приезжайте в гости: <span class="contacts__come-to-us">ул. Большая Конюшенная, 19/8</span>
-        </p>
-        <a class="contacts__map">
-          <img class="contacts__map-image" src="https://via.placeholder.com/320x645" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">
-<!--          <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">-->
+    <footer class="page-footer visually-hidden">
+      <a class="page-footer__logo-link" href="index.html">
+        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютубе</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </footer>
