--- a/source/photo.html
+++ b/source/photo.html
@@ -137,12 +137,11 @@
       </section>
 
       <section class="upload">
-        <h2 class="visually-hidden">Добавление своей фотографии</h2>
-        <p class="upload__slogan">Затмите их всех!</p>
-        <p class="upload__slogan">Выкладывайте все, что накопилось в телефоне!</p>
+        <h2 class="upload__title visually-hidden">Добавление своей фотографии</h2>
+        <p class="upload__slogan">Затмите их всех! <br> Выкладывайте все, что накопилось в телефоне!</p>
         <form class="upload__editing editing" action="https://echo.htmlacademy.ru" method="post">
           <img class="editing__photo" src="https://via.placeholder.com/280x374" alt="Заснеженная дорога в лесу">
-          <ul class="editing__list">
+          <ul class="editing__list list">
             <li class="editing__element editing__element--crop">
               <label class="editing__label">
                 Размер
