--- a/source/form.html
+++ b/source/form.html
@@ -39,83 +39,109 @@
 
     <main class="page-main">
       <section class="competition">
-        <h2 class="visually-hidden">Конкурс</h2>
+        <h2 class="competition__title visually-hidden">Конкурс</h2>
         <p class="competition__slogan">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         <form class="competition__form form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="form__name">
-            <label class="form__label">
-              Фамилия
+            <label class="form__label form__label--text">
+              Фамилия:
               <input class="form__input" type="text" name="second-name" placeholder="Укажите фамилию *" required>
             </label>
-            <label class="form__label">
-              Имя
+            <label class="form__label form__label--text">
+              Имя:
               <input class="form__input" type="text" name="first-name" placeholder="Введите ваше имя *" required>
             </label>
-            <label class="form__label">
-              Отчество
+            <label class="form__label form__label--text">
+              Отчество:
               <input class="form__input" type="text" name="patronymic" placeholder="Ну и отчество тоже">
             </label>
           </fieldset>
-          <fieldset class="form__achievements">
-            <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="selfie-with-a-shark" checked>
-              Сделал селфи с акулой
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="sunburned-on-the-beach" checked>
-              Обгорел на пляже
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="saw-chuck-norris">
-              Видел Чака Норриса
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="bought-souvenirs">
-              Накупил сувениров
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="held-the-tower" checked>
-              Удержал башню
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="checkbox" name="defeated-the-hotel">
-              Разгромил отель
-            </label>
-          </fieldset>
+          <div class="form__achievements-wrapper">
+            <fieldset class="form__achievements">
+              <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
+              <ul class="form__list list">
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="selfie-with-a-shark" checked>
+                    Сделал селфи с акулой
+                  </label>
+                </li>
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="sunburned-on-the-beach" checked>
+                    Обгорел на пляже
+                  </label>
+                </li>
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="saw-chuck-norris">
+                    Видел Чака Норриса
+                  </label>
+                </li>
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="bought-souvenirs">
+                    Накупил сувениров
+                  </label>
+                </li>
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="held-the-tower" checked>
+                    Удержал башню
+                  </label>
+                </li>
+                <li class="form__item">
+                  <label class="form__label form__label--checkbox">
+                    <input class="form__input" type="checkbox" name="defeated-the-hotel">
+                    Разгромил отель
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
           <fieldset class="form__contacts">
-            <label class="form__label">
+            <label class="form__label form__label--text">
               Номер телефона
               <input class="form__input" type="tel" name="user-phone-number" placeholder="Номер, пожалуйста">
             </label>
-            <label class="form__label">
+            <label class="form__label form__label--text">
               Адрес почты
               <input class="form__input" type="email" name="user-email" placeholder="Введите почту *" required>
             </label>
           </fieldset>
-          <fieldset class="form__mobile-platform">
-            <legend class="form__legend">С каким приложением путешествовали?</legend>
-            <label class="form__label">
-              <input class="form__input" type="radio" name="mobile-platform" checked>
-              Pink для iOS
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="radio" name="mobile-platform">
-              Pink на Android
-            </label>
-            <label class="form__label">
-              <input class="form__input" type="radio" name="mobile-platform">
-              Windows Phone
-            </label>
-          </fieldset>
+          <div class="form__platform-wrapper">
+            <fieldset class="form__platform">
+              <legend class="form__legend">С каким приложением путешествовали?</legend>
+              <ul class="form_list list">
+                <li class="form__item form__item--radio">
+                  <label class="form__label form__label--radio">
+                    <input class="form__input" type="radio" name="mobile-platform" checked>
+                    Pink для iOS
+                  </label>
+                </li>
+                <li class="form__item form__item--radio">
+                  <label class="form__label form__label--radio">
+                    <input class="form__input" type="radio" name="mobile-platform">
+                    Pink на Android
+                  </label>
+                </li>
+                <li class="form__item form__item--radio">
+                  <label class="form__label form__label--radio">
+                    <input class="form__input" type="radio" name="mobile-platform">
+                    Windows Phone
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
           <fieldset class="form__message">
-            <label class="form__label">
-              Опишите свои эмоции
-              <textarea name="message" cols="30" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <label class="form__label form__label--textarea">
+              <span class="form__label-value">Опишите свои эмоции</span>
+              <textarea class="form__text" name="message" rows="6" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </label>
           </fieldset>
-          <button class="form__button" type="submit">Отправить форму</button>
-          <small class="form__legend">
+          <button class="form__button button button--green" type="submit">Отправить форму</button>
+          <small class="form__designation">
             <sup>*</sup> — обязательные поля
           </small>
         </form>
