убирает лишние br в блоке contacts

--- a/source/index.html
+++ b/source/index.html
@@ -176,17 +176,14 @@
           <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
           <p class="contacts__phone">
             Звоните:
-            <br>
             <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
           </p>
           <p class="contacts__email">
             Пишите:
-            <br>
-            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+=            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p class="contacts__come-to-us">
             Приезжайте в гости:
-            <br>
             <span class="contacts__address">ул. Большая Конюшенная, 19/8</span>
           </p>
         </div>
