добавляет адаптинвые стили для index.html и вспомогательные скриншоты готовых страниц

--- a/source/photo.html
+++ b/source/photo.html
@@ -8,7 +8,7 @@
   <body class="photo-main">
     <div class="header-intro-wrapper header-intro-wrapper--inner-page">
       <header class="header-intro-wrapper__page-header page-header">
-        <div class="page-header__wrapper">
+        <div class="page-header__logo-toggle-wrapper">
           <a class="page-header__logo-link" href="index.html">
             <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка.">
           </a>
