заканчивет основные стили index.html

--- a/source/index.html
+++ b/source/index.html
@@ -34,9 +34,9 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page-title visually-hidden">Пинк</h1>
 
       <section class="intro">
+        <h1 class="intro__page-title visually-hidden">Пинк</h1>
         <div class="intro__wrapper">
           <h2 class="intro__title visually-hidden">Ссылки для скачивания</h2>
           <div class="intro__slogan-wrapper">
@@ -116,107 +116,122 @@
         </div>
       </section>
 
-<!--      <section class="reviews">-->
-<!--        <div class="reviews__wrapper slider">-->
-<!--          <h2 class="reviews__title visually-hidden">Отзывы</h2>-->
-<!--          <div class="reviews__list slider__list">-->
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title visually-hidden">Отзывы</h2>
+          <svg class="reviews__quotes-item" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="78.672px" height="63.789px" viewBox="0 0 78.672 63.789" enable-background="new 0 0 78.672 63.789" xml:space="preserve">
+            <g>
+              <path d="M34.967,7.063L30.713,0C28.272,1.495,0,12.207,0,39.617c0,7.231,0.336,24.172,18.9,24.172 c11.187,0,13.94-10.279,13.94-13.584c0-21.977-21.382-14.177-21.382-14.177C11.458,17.957,31.263,9.184,34.967,7.063z"/>
+            </g>
+            <g>
+              <path d="M78.672,7.063L74.418,0c-2.44,1.495-30.713,12.207-30.713,39.617c0,7.231,0.337,24.172,18.9,24.172 c11.187,0,13.939-10.279,13.939-13.584c0-21.977-21.381-14.177-21.381-14.177C55.165,17.957,74.969,9.184,78.672,7.063z"/>
+            </g>
+          </svg>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__user-name">Николай Петров</cite>
+              <p class="reviews__text">
+                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
+                А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+              </p>
+              <p class="reviews__legend">25 лет, водитель трамвая</p>
+            </blockquote>
 <!--            <blockquote class="reviews__item slider__item">-->
-<!--              <cite class="reviews__user-name">Николай Петров</cite>-->
+<!--              <cite class="reviews__user-name">Второй посетитель</cite>-->
 <!--              <p class="reviews__text">-->
-<!--                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!-->
-<!--                А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»-->
+<!--                «Это приложение бла-бла-бла»-->
 <!--              </p>-->
 <!--            </blockquote>-->
-<!--&lt;!&ndash;            <blockquote class="reviews__item slider__item">&ndash;&gt;-->
-<!--&lt;!&ndash;              <cite class="reviews__user-name">Второй посетитель</cite>&ndash;&gt;-->
-<!--&lt;!&ndash;              <p class="reviews__text">&ndash;&gt;-->
-<!--&lt;!&ndash;                «Это приложение бла-бла-бла»&ndash;&gt;-->
-<!--&lt;!&ndash;              </p>&ndash;&gt;-->
-<!--&lt;!&ndash;            </blockquote>&ndash;&gt;-->
-<!--&lt;!&ndash;            <blockquote class="reviews__item slider__item">&ndash;&gt;-->
-<!--&lt;!&ndash;              <cite class="reviews__user-name">Еще один посетитель</cite>&ndash;&gt;-->
-<!--&lt;!&ndash;              <p class="reviews__text">&ndash;&gt;-->
-<!--&lt;!&ndash;                «Большой текст хвалебного или не очень отзыва»&ndash;&gt;-->
-<!--&lt;!&ndash;              </p>&ndash;&gt;-->
-<!--&lt;!&ndash;            </blockquote>&ndash;&gt;-->
-<!--          </div>-->
-<!--          <p class="reviews__toggles slider__toggles">-->
-<!--            <button class="slider__toggle" type="button">1</button>-->
-<!--            <button class="slider__toggle" type="button">2</button>-->
-<!--            <button class="slider__toggle" type="button">3</button>-->
-<!--          </p>-->
-<!--        </div>-->
-<!--      </section>-->
+<!--            <blockquote class="reviews__item slider__item">-->
+<!--              <cite class="reviews__user-name">Еще один посетитель</cite>-->
+<!--              <p class="reviews__text">-->
+<!--                «Большой текст хвалебного или не очень отзыва»-->
+<!--              </p>-->
+<!--            </blockquote>-->
+          </div>
+          <div class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+          </div>
+        </div>
+      </section>
 
-<!--      <section class="price">-->
-<!--        <div class="price__wrapper">-->
-<!--          <h2 class="visually-hidden">Таблица цен</h2>-->
-<!--          <div class="price__table-wrapper slider">-->
-<!--            <table class="price__table">-->
-<!--              <tr>-->
-<!--                <th class="price__element price__element&#45;&#45;header">-->
-<!--                  <span class="price__tariff">База</span>-->
-<!--                  <br>-->
-<!--                  <span class="price__value">1,99 USD</span>-->
-<!--                </th>-->
-<!--                <th class="price__element price__element&#45;&#45;header price__element&#45;&#45;hit">-->
-<!--                  <span class="price__tariff">Стандарт</span>-->
-<!--                  <br>-->
-<!--                  <span class="price__value">3,99 USD</span>-->
-<!--                </th>-->
-<!--                <th class="price__element price__element&#45;&#45;header">-->
-<!--                  <span class="price__tariff">Анлим</span>-->
-<!--                  <br>-->
-<!--                  <span class="price__value">9,99 USD</span>-->
-<!--                </th>-->
-<!--              </tr>-->
-<!--              <tr>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Розовый фильтр</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Розовый фильтр</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Розовый фильтр</td>-->
-<!--              </tr>-->
-<!--              <tr>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;off">Смайлики</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Смайлики</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Смайлики</td>-->
-<!--              </tr>-->
-<!--              <tr>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;off">Комментарии</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;off">Комментарии</td>-->
-<!--                <td class="price__element price__function price__function&#45;&#45;on">Комментарии</td>-->
-<!--              </tr>-->
-<!--            </table>-->
-<!--            <p class="price__toggles slider__toggles">-->
-<!--              <button class="slider__toggle" type="button">1</button>-->
-<!--              <button class="slider__toggle" type="button">2</button>-->
-<!--              <button class="slider__toggle" type="button">3</button>-->
-<!--            </p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </section>-->
+      <section class="price">
+        <div class="price__wrapper">
+          <h2 class="visually-hidden">Таблица цен</h2>
+          <div class="price__table-wrapper slider">
+            <table class="price__table">
+              <tr>
+                <th class="price__element price__element--header price__element--additional">
+                </th>
+                <th class="price__element price__element--header">
+                  <span class="price__tariff">База</span>
+                  <br>
+                  <span class="price__value">1,99 USD</span>
+                </th>
+                <th class="price__element price__element--header price__element--hit">
+                  <span class="price__tariff">Стандарт</span>
+                  <br>
+                  <span class="price__value">3,99 USD</span>
+                </th>
+                <th class="price__element price__element--header">
+                  <span class="price__tariff">Анлим</span>
+                  <br>
+                  <span class="price__value">9,99 USD</span>
+                </th>
+              </tr>
+              <tr>
+                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Розовый фильтр</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
+              </tr>
+              <tr>
+                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Смайлики</span></td>
+                <td class="price__element price__function price__function--off"><span class="price__description">Смайлики</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Смайлики</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Смайлики</span></td>
+              </tr>
+              <tr>
+                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Комментарии</span></td>
+                <td class="price__element price__function price__function--off"><span class="price__description">Комментарии</span></td>
+                <td class="price__element price__function price__function--off"><span class="price__description">Комментарии</span></td>
+                <td class="price__element price__function price__function--on"><span class="price__description">Комментарии</span></td>
+              </tr>
+            </table>
+            <p class="price__toggles slider__toggles">
+              <button class="slider__toggle" type="button"></button>
+              <button class="slider__toggle" type="button"></button>
+              <button class="slider__toggle" type="button"></button>
+            </p>
+          </div>
+        </div>
+      </section>
 
-<!--      <section class="contacts">-->
-<!--        <h2 class="contacts__title visually-hidden">Контакты</h2>-->
-<!--        <div class="contacts__text">-->
-<!--          <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>-->
-<!--          <p class="contacts__phone">-->
-<!--            Звоните:-->
-<!--            <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>-->
-<!--          </p>-->
-<!--          <p class="contacts__email">-->
-<!--            Пишите:-->
-<!--            <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>-->
-<!--          </p>-->
-<!--          <p class="contacts__come-to-us">-->
-<!--            Приезжайте в гости:-->
-<!--            <span class="contacts__address">ул. Большая Конюшенная, 19/8</span>-->
-<!--          </p>-->
-<!--        </div>-->
+      <section class="contacts">
+        <div class="contacts__wrapper">
+            <h2 class="contacts__title visually-hidden">Контакты</h2>
+            <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
+          <div class="contacts__links">
+            <p class="contacts__phone">
+              Звоните:
+              <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+            </p>
+            <p class="contacts__email">
+              Пишите:
+              <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="contacts__come-to-us">
+              Приезжайте в гости:
+              <span class="contacts__address">ул. Большая Конюшенная, 19/8</span>
+            </p>
+          </div>
+        </div>
 <!--        <a class="contacts__map" href="#">-->
 <!--          <img class="contacts__map-image" src="https://via.placeholder.com/320x645" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">-->
-<!--  &lt;!&ndash;        <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">&ndash;&gt;-->
 <!--        </a>-->
-<!--      </section>-->
+      </section>
     </main>
 
     <footer class="page-footer">
