--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
       <div class="page-header__wrapper">
         <div class="page-header__logo-toggle-wrapper">
           <a class="page-header__logo-link">
-  <!--          <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">-->
+            <img class="page-header__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
           </a>
           <button class="page-header__toggle" type="button"></button>
         </div>
@@ -36,8 +36,8 @@
     <main class="page-main">
 
       <section class="intro">
-        <h1 class="intro__page-title visually-hidden">Пинк</h1>
-        <div class="intro__wrapper">
+        <div class="intro__wrapper intro__wrapper--index-page">
+          <h1 class="intro__page-title visually-hidden">Пинк</h1>
           <h2 class="intro__title visually-hidden">Ссылки для скачивания</h2>
           <div class="intro__slogan-wrapper">
             <p class="intro__slogan">Взгляните на жизнь иначе!</p>
@@ -75,28 +75,28 @@
           </div>
           <div class="features__lists-wrapper">
             <ul class="features__list features__list--pictures list">
-              <li class="features__item features__item--cheering-up list__item">
-  <!--              <img class="features__picture features__picture&#45;&#45;grey" src="img/iphone-screen-mobile@1x.png" alt="Черно-белая фотография мусорных баков на Айфоне.">-->
+              <li class="features__item features__item--picture features__item--cheering-up list__item">
+                <img class="features__picture features__picture--grey" src="img/iphone-screen-1-desktop@1x.png" alt="Черно-белая фотография мусорных баков на Айфоне.">
               </li>
-              <li class="features__item features__item--changing-the-world list__item">
-  <!--              <img class="features__picture features__picture&#45;&#45;pink" src="img/iphone-screen-mobile@1x.png" alt="Фотография мусорных баков через розовый фильтр на Айфоне.">-->
+              <li class="features__item features__item--picture features__item--changing-the-world list__item">
+                <img class="features__picture features__picture--pink" src="img/iphone-screen-2-desktop@1x.png" alt="Фотография мусорных баков через розовый фильтр на Айфоне.">
               </li>
-              <li class="features__item features__item--making-friends list__item">
-  <!--              <img class="features__picture features__picture&#45;&#45;pink-greeting" src="img/iphone-screen-mobile@1x.png" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне.">-->
+              <li class="features__item features__item--picture features__item--making-friends list__item">
+                <img class="features__picture features__picture--pink-greeting" src="img/iphone-screen-3-desktop@1x.png" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне.">
               </li>
             </ul>
             <ul class="features__list features__list--descriptions list">
-              <li class="features__item features__item--cheering-up list__item">
-  <!--              <h3 class="features__title">Поднимает настроение</h3>-->
-  <!--              <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>-->
+              <li class="features__item features__item--description features__item--cheering-up list__item">
+                <h3 class="features__title">Поднимает настроение</h3>
+                <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
               </li>
-              <li class="features__item features__item--changing-the-world list__item">
-  <!--              <h3 class="features__title">Меняет мир вокруг</h3>-->
-  <!--              <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>-->
+              <li class="features__item features__item--description features__item--changing-the-world list__item">
+                <h3 class="features__title">Меняет мир вокруг</h3>
+                <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
               </li>
-              <li class="features__item features__item--making-friends list__item">
-  <!--              <h3 class="features__title">Заводит новых друзей</h3>-->
-  <!--              <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>-->
+              <li class="features__item features__item--description features__item--making-friends list__item">
+                <h3 class="features__title">Заводит новых друзей</h3>
+                <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
               </li>
             </ul>
           </div>
@@ -234,29 +234,33 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--index">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo-link" href="index.html">
-  <!--        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">-->
+        <a class="page-footer__logo-link">
+          <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
         </a>
-        <div class="page-footer__social social">
-          <ul class="social__list list">
-            <li class="social__item">
-<!--              <a class="social__link social__link&#45;&#45;twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>-->
-            </li>
-            <li class="social__item">
-<!--              <a class="social__link social__link&#45;&#45;facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>-->
-            </li>
-            <li class="social__item">
-<!--              <a class="social__link social__link&#45;&#45;youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютубе</a>-->
-            </li>
-          </ul>
-        </div>
+        <ul class="page-footer__social list">
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--facebook" href="https://www.facebook.com/htmlacademy">
+              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">
+              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+            </a>
+          </li>
+        </ul>
         <div class="page-footer__copyright copyright">
-  <!--        <b class="copyright__text">Разработано</b>-->
-  <!--        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">-->
-  <!--          <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">-->
-  <!--        </a>-->
+          <span class="copyright__text">Разработано</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
+          </a>
         </div>
       </div>
     </footer>
