--- a/source/form.html
+++ b/source/form.html
@@ -22,7 +22,7 @@
           <li class="site-list__item">
             <a class="site-list__link" href="photo.html">Фотографии</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--current">
             <a class="site-list__link">Конкурс</a>
           </li>
           <li class="site-list__item">
