--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
       <div class="page-header__wrapper">
         <div class="page-header__logo-toggle-wrapper">
           <a class="page-header__logo-link">
-            <img class="page-header__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
+            <img class="page-header__logo-image" src="https://via.placeholder.com/147x40" width="75" height="22" alt="Логотип Пинка.">
           </a>
           <button class="page-header__toggle" type="button"></button>
         </div>
@@ -39,9 +39,7 @@
         <div class="intro__wrapper intro__wrapper--index-page">
           <h1 class="intro__page-title visually-hidden">Пинк</h1>
           <h2 class="intro__title visually-hidden">Ссылки для скачивания</h2>
-          <div class="intro__slogan-wrapper">
-            <p class="intro__slogan">Взгляните на жизнь иначе!</p>
-          </div>
+          <p class="intro__slogan">Взгляните на жизнь иначе!</p>
 
           <a class="intro__main-link button button--download" href="https://www.apple.com/ru/ios/app-store/">Скачать приложение</a>
           <ul class="intro__list list">
@@ -70,43 +68,32 @@
           <h2 class="visually-hidden">Особенности Пинка</h2>
 
           <div class="features__slogan">
-            <p>Устали от серости мегаполиса?</p>
-            <p>Нам есть, что вам <br> предложить!</p>
+            <p class="features__slogan-item">Устали от серости мегаполиса?</p>
+            <p class="features__slogan-item">Нам есть, что вам предложить!</p>
           </div>
-          <div class="features__lists-wrapper">
-            <ul class="features__list features__list--pictures list">
-              <li class="features__item features__item--picture features__item--cheering-up list__item">
-                <img class="features__picture features__picture--grey" src="img/iphone-screen-1-desktop@1x.png" alt="Черно-белая фотография мусорных баков на Айфоне.">
-              </li>
-              <li class="features__item features__item--picture features__item--changing-the-world list__item">
-                <img class="features__picture features__picture--pink" src="img/iphone-screen-2-desktop@1x.png" alt="Фотография мусорных баков через розовый фильтр на Айфоне.">
-              </li>
-              <li class="features__item features__item--picture features__item--making-friends list__item">
-                <img class="features__picture features__picture--pink-greeting" src="img/iphone-screen-3-desktop@1x.png" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне.">
-              </li>
-            </ul>
-            <ul class="features__list features__list--descriptions list">
-              <li class="features__item features__item--description features__item--cheering-up list__item">
-                <h3 class="features__title">Поднимает настроение</h3>
-                <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-              </li>
-              <li class="features__item features__item--description features__item--changing-the-world list__item">
-                <h3 class="features__title">Меняет мир вокруг</h3>
-                <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-              </li>
-              <li class="features__item features__item--description features__item--making-friends list__item">
-                <h3 class="features__title">Заводит новых друзей</h3>
-                <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-              </li>
-            </ul>
-          </div>
+          <ul class="features__list list">
+            <li class="features__item">
+              <img class="features__picture" src="img/iphone-screen-1-desktop@1x.png" alt="Черно-белая фотография мусорных баков на Айфоне.">
+              <h3 class="features__title">Поднимает настроение</h3>
+              <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="features__item">
+              <img class="features__picture" src="img/iphone-screen-2-desktop@1x.png" alt="Фотография мусорных баков через розовый фильтр на Айфоне.">
+              <h3 class="features__title">Меняет мир вокруг</h3>
+              <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="features__item">
+              <img class="features__picture" src="img/iphone-screen-3-desktop@1x.png" width="292" height="302" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне.">
+              <h3 class="features__title">Заводит новых друзей</h3>
+              <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
         </div>
       </section>
 
       <section class="research">
         <div class="research__wrapper">
           <h2 class="visually-hidden">Исследование</h2>
-          <div class="research__diagram"></div>
           <div class="research__content">
             <p class="research__slogan">Эффект на 24 часа!</p>
             <p class="research__text">Британские ученые провели исследования и доказали,
@@ -164,6 +151,7 @@
             <table class="price__table">
               <tr>
                 <th class="price__element price__element--header price__element--additional">
+                  <span class="visually-hidden">Список функций</span>
                 </th>
                 <th class="price__element price__element--header">
                   <span class="price__tariff">База</span>
@@ -182,19 +170,19 @@
                 </th>
               </tr>
               <tr>
-                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Розовый фильтр</span></td>
+                <td class="price__element price__function price__element--additional">Розовый фильтр</td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Розовый фильтр</span></td>
               </tr>
               <tr>
-                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Смайлики</span></td>
+                <td class="price__element price__function price__element--additional">Смайлики</td>
                 <td class="price__element price__function price__function--off"><span class="price__description">Смайлики</span></td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Смайлики</span></td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Смайлики</span></td>
               </tr>
               <tr>
-                <td class="price__element price__function price__element--additional"><span class="price__description--additional">Комментарии</span></td>
+                <td class="price__element price__function price__element--additional">Комментарии</td>
                 <td class="price__element price__function price__function--off"><span class="price__description">Комментарии</span></td>
                 <td class="price__element price__function price__function--off"><span class="price__description">Комментарии</span></td>
                 <td class="price__element price__function price__function--on"><span class="price__description">Комментарии</span></td>
