--- a/source/photo.html
+++ b/source/photo.html
@@ -19,7 +19,7 @@
             <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--current">
               <a class="site-list__link">Фотографии</a>
             </li>
             <li class="site-list__item">
